2001-02-06  Maciej Stachowiak  <mjs@eazel.com>

	* Makefile.am, .cvsignore: Updated for new xml-i18n-tools.

2001-02-05  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Seth Nickell  <seth@eazel.com>

	Fix 5930 (Copy dialog often shows "1" as total number of
		  fields in operation)
	Fix a ton of problems with the progress calculation.
	
	* libgnomevfs/gnome-vfs-xfer.c: (remove_file), (remove_directory),
	(count_each_file_size_one), (gnome_vfs_xfer_empty_directories),
	(gnome_vfs_xfer_delete_items), (gnome_vfs_xfer_uri_internal),
	(gnome_vfs_xfer_private):
	When removing during a copy conflict, do not update the progress.
	Store and retireve the preflight results when doing a conflict
	handling during copy.
	Properly calculate removed file size -- use a nominal per-file
	overhead rather than the file size.
	Properly calculate progress for files with zero or near-zero
	size.
	Fix numerous wrong uses of total_bytes_copied and bytes_total.
	
	* configure.in:
	Bump GnomeVFS version.
	
2001-02-05  Gene Z. Ragan  <gzr@eazel.com>

	Work done to improve the mime tpye capplet.
	Enable the capplet to be launched with a mime type.
	If a mime type is an argument, have the capplet scroll
	to that item in the list before the user begins interaction.
	
	* mime-type-capplet/nautilus-mime-type-capplet.c: (main),
	(list_move_vertical), (list_moveto), (list_reveal_row),
	(init_mime_capplet), (populate_mime_list):

2001-02-05  Rebecca Schulman  <rebecka@eazel.com>
	Fix problem that the mozilla view was the default for webdav
	directories (should be icon view) and that the music view was
	always first on the short list.  The problem was that the default
	component for the supertype to the short list was first on the
	short list, instead of being after all of the regular mime type's
	short list components.  We now only use the supertype's default
	if it is explicitly set by the user.

	reviewed by: Mike Fleming <mfleming@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c: