@@ -1,3 +1,11 @@
+2001-02-06  Gene Z. Ragan  <gzr@eazel.com>
+
+	Fixed bug 6258, Determine initial capplet sort column
+	
+	* mime-type-capplet/nautilus-mime-type-capplet.c:
+	(init_mime_capplet):
+	Sort based on first column in list.
+
 2001-02-06  Maciej Stachowiak  <mjs@eazel.com>
 
 	* Makefile.am, .cvsignore: Updated for new xml-i18n-tools.
